[package]
name = "kys_rust"
version = "0.1.0"
authors = ["Broly CJW <brolycjw@gmail.com>"]
edition = "2018"

[dependencies]
pistoncore-glutin_window = "0.51.1"
piston = "0.39.0"
piston2d-opengl_graphics = "0.57.0"
byteorder = "1.2.7"
find_folder = "0.3.0"
image = "0.20.1"
piston2d-graphics = "0.28.0"
